--- a/.copier-answers.yml
+++ b/.copier-answers.yml
@@ -1,6 +1,6 @@
 ---
 ## Changes here will be overwritten by Copier; NEVER EDIT MANUALLY
-_commit: v1.3.3-39-ge7dbd55
+_commit: v1.3.3-40-g5f87a63
 _src_path: /Users/kamontat/Desktop/Personal/asdf-plugin-template
 app_desc: A command-line client for Cloudflare Tunnel
 app_name: cloudflared
