--- a/.copier-answers.yml
+++ b/.copier-answers.yml
@@ -1,6 +1,6 @@
 ---
 ## Changes here will be overwritten by Copier; NEVER EDIT MANUALLY
-_commit: v1.3.3-48-ga717871
+_commit: v1.3.3-50-gd56c40f
 _src_path: /Users/kamontat/Desktop/Personal/asdf-plugin-template
 app_desc: A command-line client for Cloudflare Tunnel
 app_name: cloudflared
