--- a/.copier-answers.yml
+++ b/.copier-answers.yml
@@ -1,10 +1,26 @@
 ---
 ## Changes here will be overwritten by Copier; NEVER EDIT MANUALLY
-_commit: v1.3.3-52-g8586b2f
+_commit: v2.0.0-8-g4b0de94
 _src_path: /Users/kamontat/Desktop/Personal/asdf-plugin-template
+addon_yaml:
+    archive: true
+    checksum: true
+    download: true
+    fetch: true
+    git: false
+    github: true
+    gpg: false
+    help: true
+    install: true
+    package: false
+    python: false
+    system: true
+    tags: true
+    version: true
 app_desc: A command-line client for Cloudflare Tunnel
 app_name: cloudflared
 app_repo: https://github.com/cloudflare/cloudflared
+app_type: standalone
 app_website: https://developers.cloudflare.com/cloudflare-one/connections/connect-apps/install-and-setup/tunnel-guide
 archive_conf_path: ''
 archive_conf_strip: 0
