--- a/.copier-answers.yml
+++ b/.copier-answers.yml
@@ -1,6 +1,6 @@
 ---
 ## Changes here will be overwritten by Copier; NEVER EDIT MANUALLY
-_commit: v2.0.2
+_commit: v2.1.1
 _src_path: gh:kc-workspace/asdf-plugin-template.git
 addon_yaml:
     archive: true
@@ -29,18 +29,8 @@ archive_regex: (\.tar\.gz|\.tgz|\.zip)$
 checksum_conf_algorithm: 256
 checksum_enabled: true
 checksum_url: https://api.github.com/repos/cloudflare/cloudflared/releases/tags/{version}
-custom_arch_enabled: true
-custom_arch_yaml:
-    armv5*: armv5
-    armv6*: armv6
-    armv7*: armv7
-    i386: '386'
-    i686: '386'
-    x86: '386'
-    x86_64: amd64
 custom_bin_paths: bin
 custom_non_stable_version: (-src|-dev|-latest|-stm|[-\.]rc|-alpha|-beta|[-\.]pre|-next|snapshot|master)
-custom_os_enabled: false
 custom_require_commands: ''
 download_url: https://github.com/cloudflare/cloudflared/releases/download/{version}/cloudflared-{os}-{arch}$(download_ext)
 gpg_enabled: false
@@ -54,6 +44,20 @@ plugin_name: asdf-cloudflared
 plugin_org: kc-workspace
 plugin_repo: https://github.com/kc-workspace/asdf-cloudflared.git
 source_enabled: false
+sys_arch_enabled: true
+sys_arch_yaml:
+    aarch64*: arm64
+    armv5*: armv5
+    armv6*: armv6
+    armv7*: armv7
+    i386: '386'
+    i686: '386'
+    powerpc64le: ppc64le
+    ppc64le: ppc64le
+    x86: '386'
+    x86_64: amd64
+sys_ext_enabled: false
+sys_os_enabled: false
 test_cmd_args: --version
 version_file_enabled: false
 version_prefix: ''
